--- a/Neo-6M/Debug/makefile
+++ b/Neo-6M/Debug/makefile
@@ -61,7 +61,7 @@ main-build: Neo-6M.elf secondary-outputs
 
 # Tool invocations
 Neo-6M.elf Neo-6M.map: $(OBJS) $(USER_OBJS) /Users/mglavind/Embedded/Neo-6M/STM32F302R8TX_FLASH.ld makefile objects.list $(OPTIONAL_TOOL_DEPS)
-	arm-none-eabi-gcc -o "Neo-6M.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/Users/mglavind/Embedded/Neo-6M/STM32F302R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Neo-6M.map" -Wl,--gc-sections -static --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
+	arm-none-eabi-gcc -o "Neo-6M.elf" @"objects.list" $(USER_OBJS) $(LIBS) -mcpu=cortex-m4 -T"/Users/mglavind/Embedded/Neo-6M/STM32F302R8TX_FLASH.ld" --specs=nosys.specs -Wl,-Map="Neo-6M.map" -Wl,--gc-sections -static  -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -Wl,--start-group -lc -lm -Wl,--end-group
 	@echo 'Finished building target: $@'
 	@echo ' '
 
